Fixed menu bar to look nice on small screens

--- a/static/style.css
+++ b/static/style.css
@@ -24,9 +24,7 @@ body, html{
    padding: 0;      
 }
 
-.header li{
-   display: inline;
-}
+.header li{display: inline;}
  
 .header li a{
    color: white;
@@ -42,17 +40,11 @@ body, html{
    background-position: center center;
 }
 
-.fixed.mural-bg{
-   background-image: url("images/mural.JPG");
-}
+.fixed.mural-bg{background-image: url("images/mural.JPG");}
 
-.fixed.yellow-bg{
-   background-image: url("images/yellowimg.png");
-}
+.fixed.yellow-bg{background-image: url("images/yellowimg.png");}
 
-.fixed.red-bg{
-   background-image: url("images/redimg.png");
-}
+.fixed.red-bg{background-image: url("images/redimg.png");}
  
 .scrolling{
    background-image: linear-gradient(170deg, black, #303030);
@@ -88,14 +80,21 @@ body, html{
    margin: 0 auto 0 auto;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1000px) {
    .fixed {
       background-attachment: scroll;
       background-size: contain;
       background-position: top center;
    }
 
-   .scrolling{
-      position: relative;
+   .scrolling{position: relative;}
+
+   .header li a{
+      display: block;
+      padding: 0;
+   }
+   .header li a:hover{
+      background-color: #303030;
+      color:white;
    }
 }
